sock-shop/do-not-use/sockshop-with-kubedb/load-testing/locust-installation.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"ServiceAccount","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1",
"helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust-master","namespace":"sock-shop"}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust-master
    namespace: sock-shop
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"ServiceAccount","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1",
"helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust-worker","namespace":"sock-shop"}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust-worker
    namespace: sock-shop
- apiVersion: v1
  data:
    docker-entrypoint.sh: |
      #!/bin/sh

      set -eu

      exec /opt/venv/bin/locust $@
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"docker-entrypoint.sh":"#!/bin/sh\n\nset -eu\n\nexec /opt/venv/bin/locust $@\n"},"kind":"ConfigMap","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/manage
d-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust-config","namespace":"sock-shop"}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust-config
    namespace: sock-shop
- apiVersion: v1
  data: {}
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{},"kind":"ConfigMap","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.1
5.1","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"example-lib","namespace":"sock-shop"}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: example-lib
    namespace: sock-shop
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1","compon
ent":"master","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust","namespace":"sock-shop"},"spec":{"ports":[{"name":"master-p1","port":5557,"protocol":"TCP","targetPort":5557},{"name":"master-p2","port":5558,"protocol
":"TCP","targetPort":5558},{"name":"master-p3","port":8089,"protocol":"TCP","targetPort":8089}],"selector":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/name":"locust","component":"master","load_test":"loadtest"},"type":"Clus
terIP"}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      component: master
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust
    namespace: sock-shop
  spec:
    ports:
    - name: master-p1
      port: 5557
      protocol: TCP
      targetPort: 5557
    - name: master-p2
      port: 5558
      protocol: TCP
      targetPort: 5558
    - name: master-p3
      port: 8089
      protocol: TCP
      targetPort: 8089
    selector:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/name: locust
      component: master
      load_test: loadtest
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1"
,"component":"master","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust-master","namespace":"sock-shop"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/name":
"locust","component":"master","load_test":"loadtest"}},"strategy":{"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"checksum/config-config":"281ecdf676bf872065f9e843e2f1bfbb4a8670f13ce365a8ac89f2af1a59cfd4","checksum/confi
g-locust-lib":"57e25db41ce530d758dddaa3bcb45513b0edee3f1303e35bd75f00abfeef56fc","checksum/config-locust-locustfile":"01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b","checksum/config-secret":"01ba4719c80b6fe911b091a7c05
124b64eeece964e09c058ef8f9805daca546b"},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1","component":"master","helm.sh/chart":"lo
cust-0.31.5","load_test":"loadtest"}},"spec":{"containers":[{"args":["--master"],"command":["sh","/config/docker-entrypoint.sh"],"env":[{"name":"LOCUST_HOST","value":"https://www.google.com"},{"name":"LOCUST_LOGLEVEL","value":"INFO"},{"n
ame":"LOCUST_LOCUSTFILE","value":"/mnt/locust/locustfile.py"}],"image":"locustio/locust:2.15.1","imagePullPolicy":"IfNotPresent","name":"locust","ports":[{"containerPort":8089,"name":"loc-master-web","protocol":"TCP"},{"containerPort":55
57,"name":"loc-master-p1","protocol":"TCP"},{"containerPort":5558,"name":"loc-master-p2","protocol":"TCP"}],"readinessProbe":{"failureThreshold":2,"httpGet":{"path":"/","port":8089},"initialDelaySeconds":5,"periodSeconds":30,"timeoutSeco
nds":30},"resources":{},"securityContext":{},"volumeMounts":[{"mountPath":"/mnt/locust","name":"locustfile"},{"mountPath":"/mnt/locust/lib","name":"lib"},{"mountPath":"/config","name":"config"}]}],"nodeSelector":{"group":"md-2"},"restart
Policy":"Always","securityContext":{},"serviceAccountName":"locust-master","volumes":[{"configMap":{"name":"example-lib"},"name":"lib"},{"configMap":{"name":"sockshop-locust-configmap"},"name":"locustfile"},{"configMap":{"name":"locust-c
onfig"},"name":"config"}]}}}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      component: master
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust-master
    namespace: sock-shop
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/instance: locust
        app.kubernetes.io/name: locust
        component: master
        load_test: loadtest
    strategy:
      type: RollingUpdate
    template:
      metadata:
        annotations:
          checksum/config-config: 281ecdf676bf872065f9e843e2f1bfbb4a8670f13ce365a8ac89f2af1a59cfd4
          checksum/config-locust-lib: 57e25db41ce530d758dddaa3bcb45513b0edee3f1303e35bd75f00abfeef56fc
          checksum/config-locust-locustfile: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
          checksum/config-secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        labels:
          app.kubernetes.io/instance: locust
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: locust
          app.kubernetes.io/version: 2.15.1
          component: master
          helm.sh/chart: locust-0.31.5
          load_test: loadtest
      spec:
        containers:
        - args:
          - --master
          command:
          - sh
          - /config/docker-entrypoint.sh
          image: locustio/locust:2.15.1
          imagePullPolicy: IfNotPresent
          name: locust
          ports:
          - containerPort: 8089
            name: loc-master-web
            protocol: TCP
          - containerPort: 5557
            name: loc-master-p1
            protocol: TCP
          - containerPort: 5558
            name: loc-master-p2
            protocol: TCP
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 8089
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
          resources: {}
          securityContext: {}
          volumeMounts:
          - mountPath: /mnt/locust
            name: locustfile
          - mountPath: /mnt/locust/lib
            name: lib
          - mountPath: /config
            name: config
        nodeSelector:
          group: md-2
        restartPolicy: Always
        securityContext: {}
        serviceAccountName: locust-master
        volumes:
        - configMap:
            name: example-lib
          name: lib
        - configMap:
            name: sockshop-locust-configmap
          name: locustfile
        - configMap:
            name: locust-config
          name: config
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1"
,"component":"worker","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust-worker","namespace":"sock-shop"},"spec":{"selector":{"matchLabels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/name":"locust","com
ponent":"worker","load_test":"loadtest"}},"strategy":{"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"checksum/config-config":"281ecdf676bf872065f9e843e2f1bfbb4a8670f13ce365a8ac89f2af1a59cfd4","checksum/config-locust-lib"
:"57e25db41ce530d758dddaa3bcb45513b0edee3f1303e35bd75f00abfeef56fc","checksum/config-locust-locustfile":"01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b","checksum/config-secret":"01ba4719c80b6fe911b091a7c05124b64eeece96
4e09c058ef8f9805daca546b"},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.io/version":"2.15.1","component":"worker","helm.sh/chart":"locust-0.31.5",
"load_test":"loadtest"}},"spec":{"containers":[{"args":["--worker"],"command":["sh","/config/docker-entrypoint.sh"],"env":[{"name":"LOCUST_HOST","value":"https://www.google.com"},{"name":"LOCUST_MASTER_NODE_HOST","value":"locust"},{"name
":"LOCUST_MASTER_NODE_PORT","value":"5557"},{"name":"LOCUST_LOGLEVEL","value":"INFO"},{"name":"LOCUST_LOCUSTFILE","value":"/mnt/locust/locustfile.py"}],"image":"locustio/locust:2.15.1","imagePullPolicy":"IfNotPresent","name":"locust","re
sources":{"requests":{"cpu":"500m","memory":"512Mi"}},"securityContext":{},"volumeMounts":[{"mountPath":"/mnt/locust","name":"locustfile"},{"mountPath":"/mnt/locust/lib","name":"lib"},{"mountPath":"/config","name":"config"}]}],"nodeSelec
tor":{"group":"md-2"},"restartPolicy":"Always","securityContext":{},"serviceAccountName":"locust-worker","volumes":[{"configMap":{"name":"example-lib"},"name":"lib"},{"configMap":{"name":"sockshop-locust-configmap"},"name":"locustfile"},
{"configMap":{"name":"locust-config"},"name":"config"}]}}}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      component: worker
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust-worker
    namespace: sock-shop
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/instance: locust
        app.kubernetes.io/name: locust
        component: worker
        load_test: loadtest
    strategy:
      type: RollingUpdate
    template:
      metadata:
        annotations:
          checksum/config-config: 281ecdf676bf872065f9e843e2f1bfbb4a8670f13ce365a8ac89f2af1a59cfd4
          checksum/config-locust-lib: 57e25db41ce530d758dddaa3bcb45513b0edee3f1303e35bd75f00abfeef56fc
          checksum/config-locust-locustfile: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
          checksum/config-secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        labels:
          app.kubernetes.io/instance: locust
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: locust
          app.kubernetes.io/version: 2.15.1
          component: worker
          helm.sh/chart: locust-0.31.5
          load_test: loadtest
      spec:
        containers:
        - args:
          - --worker
          command:
          - sh
          - /config/docker-entrypoint.sh
          image: locustio/locust:2.15.1
          imagePullPolicy: IfNotPresent
          name: locust
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
          - mountPath: /mnt/locust
            name: locustfile
          - mountPath: /mnt/locust/lib
            name: lib
          - mountPath: /config
            name: config
        nodeSelector:
          group: md-2
        restartPolicy: Always
        securityContext: {}
        serviceAccountName: locust-worker
        volumes:
        - configMap:
            name: example-lib
          name: lib
        - configMap:
            name: sockshop-locust-configmap
          name: locustfile
        - configMap:
            name: locust-config
          name: config
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"autoscaling/v1","kind":"HorizontalPodAutoscaler","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"locust","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"locust","app.kubernetes.
io/version":"2.15.1","component":"worker","helm.sh/chart":"locust-0.31.5","load_test":"loadtest"},"name":"locust","namespace":"sock-shop"},"spec":{"maxReplicas":100,"minReplicas":5,"scaleTargetRef":{"apiVersion":"apps/v1","kind":"Deploym
ent","name":"locust-worker"},"targetCPUUtilizationPercentage":70}}
    labels:
      app.kubernetes.io/instance: locust
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: locust
      app.kubernetes.io/version: 2.15.1
      component: worker
      helm.sh/chart: locust-0.31.5
      load_test: loadtest
    name: locust
    namespace: sock-shop
  spec:
    maxReplicas: 100
    minReplicas: 5
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: locust-worker
    targetCPUUtilizationPercentage: 70
kind: List
metadata: {}
