sock-shop/do-not-use/sockshop-with-kubedb/load-testing/ingress-locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-locust
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: locust
      port:
        number: 8089
